<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.anything.chattingapp.view.main.ui.home.ChatFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stories"
        android:name="com.anything.chattingapp.view.main.ui.stories.StoriesFragment"
        android:label="@string/title_stories"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.anything.chattingapp.view.main.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_profile_edit"
            app:destination="@id/navigation_profile_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.anything.chattingapp.view.main.ui.profile.ProfileEditFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_profile_edit" />

</navigation>